--- a/pkg/ui/styl/base/palette.styl
+++ b/pkg/ui/styl/base/palette.styl
@@ -93,3 +93,4 @@ $gray-blue = #C8CBD4
 $dark-gray-blue = #728099
 $hover-gray = #F0F0F0 // dropdown hover
 $table-gray = #5D5D5D
+$banner-red = #F4D9D9
