--- a/pkg/ui/styl/app.styl
+++ b/pkg/ui/styl/app.styl
@@ -33,6 +33,7 @@ Author: Matt Tracy (matt@cockroachlabs.com)
 @require 'pages/databases.styl'
 @require 'pages/nodes.styl'
 
+@require 'components/alert.styl'
 @require 'components/button.styl'
 @require 'components/codeblock.styl'
 @require 'components/dropdown.styl'
