--- a/pkg/ui/styl/layout/banner.styl
+++ b/pkg/ui/styl/layout/banner.styl
@@ -1,27 +1,33 @@
 #banner
-  max-height 73px
+  max-height 58px
 
 .banner
   width 100%
-  background-color $secondary-blue
+  background-color $alert-red
   transition height .2s ease-in, opacity .2s ease-in
-  font-family Lato-Medium
-  font-size 13px
-  text-align center
-  line-height 73px
-  color white
+  font-family Lato-Bold
+  font-size 16px
+  text-align left
+  line-height 58px
+  color $light-blue
   position absolute
+  left 104px
+  top 24px
+  height 58px
+  width 1286px
   z-index 10
+  border-radius 4px
+  border-color rgba(241, 105, 105, .1)
+  box-shadow 0 0 5px rgba(0, 0, 0, .1)
+  padding-left 25px
+  overflow hidden
 
   &.expanded
-    height 73px
+    height 58px
 
   &.hidden
     height 0
     visibility hidden
-
-  &.disconnected
-    background-color $secondary-salmon
 
   button
     margin-left 15px
@@ -31,7 +37,7 @@
     &:hover
       background-color $secondary-gold-2
 
-  .checkmark, .icon-warning
+  .checkmark, .warning
     font-size 15px
     margin-right 15px
     border-radius 100%
@@ -40,12 +46,14 @@
     height 38px
     padding 5px 5px 5px 7px
 
-  .icon-warning
-    color $secondary-gold
+  .warning
     border 0
     vertical-align middle
+    position relative
+    top 2px
 
   .close
     position absolute
     top 0
     right 3rem
+    font-family Lato-Bold
