ui: Liveness info on Nodes List page
Two main additions:
+ The Admin UI now queries Liveness data from the backend, and can now use it to better
inform status visuals across the cluster. This data is added to the Redux state;
additionally, numerous selectors have been created in the new `redux/nodes.ts`
which provide useful computed information to various components.
+ This information is now being used by the Nodes List to divide all nodes into
"Live" and "Dead".

The nodes page has been changed to display two tables - one for live nodes, and
another for dead nodes. This fixes #5415, as dead nodes now have a different set
of columns than live nodes and thus we are no longer displaying out-of-date
values for these nodes. This also fixes #12422, as dead nodes are no longer
considered in summation totals. Also makes progress towards #13895.

While overhauling the nodes page, have also added a tooltip to the colored
health indicators on the nodes list to help explain the "healthy", "suspect" and
"dead" states. Fixes #7547.

--- a/pkg/ui/styl/pages/nodes.styl
+++ b/pkg/ui/styl/pages/nodes.styl
@@ -5,9 +5,9 @@
   line-height 14px
   vertical-align middle
   
-  &--missing
+  &--dead
     color $secondary-red
-  &--stale
+  &--suspect
     color $secondary-gold
   &--healthy
     color $main-green
