ui: Node List Improvements
The "Node Totals" on the cluster overview page, which links to the Node List,
now provides a detailed breakdown whenever any nodes in the cluster are in the
suspect or dead state.
Resolves #5303
Resolves #13895

A "Node ID" column has been added to the tables on the Node List page; this
allows us to disambiguate between nodes with the same address, an apparently
common occurrence in early clusters.
Resolves #12587

Finally, the cutoff for marking a node in the "Suspect" state has been changed;
rather than an arbitrary 1-minute timeout for expiration, nodes are now
considered suspect immediately if their liveness record is expired. This allows
for much more rapid updates in the UI when a node is take offline, something
that will improve our demoability considerably. This does not fix a specific
issue, but is something I have been considering since adding the suspect
timeout.

--- a/pkg/ui/styl/components/summarybar.styl
+++ b/pkg/ui/styl/components/summarybar.styl
@@ -35,6 +35,9 @@
   padding 10px 0
   line-height 18px
 
+  &__body
+    clearfix()
+
   &__title
     color $light-blue
     float left
@@ -58,3 +61,25 @@
 
   & + .summary-stat
     border-top 1px solid rgb(242, 242, 242)
+
+.summary-stat-breakdown
+  padding 2px 0
+
+  &--dead
+    color $secondary-red
+
+  &--suspect
+    color $secondary-gold
+
+  &--healthy
+    color $main-green
+
+  &__body
+    clearfix()
+
+  &__title
+    float left
+    margin-right 2em
+
+  &__value
+    float right
