Add optional horizontal scrollbar to table create schema field

--- a/pkg/ui/styl/components/codeblock.styl
+++ b/pkg/ui/styl/components/codeblock.styl
@@ -4,10 +4,11 @@
   padding 20px
   display inline-block
   width 100%
-  
+
 pre.sql.hljs
     background-color $main-dark-gray
     color $secondary-gray-12
+    overflow-x auto
 
     .hljs-string
         color $syntax-orange
