--- a/pkg/ui/styl/components/table.styl
+++ b/pkg/ui/styl/components/table.styl
@@ -25,36 +25,61 @@ $stats-table-th--bg     = white
 $stats-table-tr--bg     = white
 $stats-table-tr--bg-alt = $secondary-gray-7
 
-// ---- Data table ----
-.sort-table
-  font-family Lato-Regular
-  border-collapse collapse
-  border $stats-table-cell--border
+$table-base
   width 100%
+  border $stats-table-cell--border
+  border-collapse collapse
+  font-family Lato-Regular
+  font-weight 300
+  font-size 14px
+  vertical-align top
+  white-space nowrap
+  color $stats-table-td--fg
 
   &__row
     &--body
+      letter-spacing .33px
       background-color $stats-table-tr--bg
       &:nth-child(odd)
         background-color $stats-table-tr--bg-alt
 
     &--header
       padding 20px
-      background-color $stats-table-th--bg
-      text-transform uppercase
+      font-size 12px
       font-weight normal
+      letter-spacing 2px
+      text-transform uppercase
       text-align left
-      font-size 10px
-      letter-spacing 1.5px
       white-space nowrap
+      background-color $stats-table-th--bg
 
+  &__cell
+    padding 10px 20px
+    border-right $stats-table-cell--border
+
+    a
+      font-weight 400
+      color $link-blue
+      text-decoration none
+      width 100%
+      height 100%
+
+    &--filler
+      width 100%
+
+// ---- Basic Table ----
+.table
+  @extend $table-base
+
+
+// ---- Sortable table ----
+.sort-table
+  @extend $table-base
+
+  &__row--header
       // Display the sort direction arrow in header cells.
       .sort-table__cell
         padding 18px 20px
-        color $stats-table-th--fg
-        font-size 12px
-        font-weight 400
-        letter-spacing 2px
         color $lighter-blue
 
         &--sortable:after
@@ -73,24 +98,6 @@ $stats-table-tr--bg-alt = $secondary-gray-7
           color $light-blue
           &:after
             content "▲"
-
-
-  &__cell
-    vertical-align top
-    padding 10px 20px
-    color $stats-table-td--fg
-    font-weight 300
-    font-size 14px
-    letter-spacing .33px
-    white-space nowrap
-    border-right $stats-table-cell--border
-
-    a
-      font-weight 400
-      color $link-blue
-      text-decoration none
-      width 100%
-      height 100%
 
   &__unbounded-column
     whitespace normal
