--- a/pkg/ui/styl/app.styl
+++ b/pkg/ui/styl/app.styl
@@ -31,12 +31,14 @@ Author: Matt Tracy (matt@cockroachlabs.com)
 @require 'pages/cluster.styl'
 @require 'pages/databases.styl'
 @require 'pages/nodes.styl'
+@require 'pages/queryplan.styl'
 
 @require 'components/alert.styl'
 @require 'components/button.styl'
 @require 'components/codeblock.styl'
 @require 'components/dropdown.styl'
 @require 'components/events.styl'
+@require 'components/queryplangraph.styl'
 @require 'components/summarybar.styl'
 @require 'components/table.styl'
 @require 'components/tooltip.styl'
