--- a/pkg/ui/styl/app.styl
+++ b/pkg/ui/styl/app.styl
@@ -32,6 +32,7 @@ Author: Matt Tracy (matt@cockroachlabs.com)
 @require 'pages/databases.styl'
 @require 'pages/nodes.styl'
 @require 'pages/queryplan.styl'
+@require 'pages/debug.styl'
 
 @require 'components/alert.styl'
 @require 'components/button.styl'
