server, ui: move problem range endpoint from /_status to /_report
This adds a new gRPC service for reports. Since calls to report tend to be longer running than normal status queries, I felt this was an appropriate separation.

This also moves the first avilable report in the ui to be under /report instead of /debug.

--- a/pkg/ui/styl/app.styl
+++ b/pkg/ui/styl/app.styl
@@ -32,7 +32,7 @@ Author: Matt Tracy (matt@cockroachlabs.com)
 @require 'pages/databases.styl'
 @require 'pages/nodes.styl'
 @require 'pages/queryplan.styl'
-@require 'pages/debug.styl'
+@require 'pages/reports.styl'
 
 @require 'shame.styl'
 
