server, ui: move problem range page from debug to reports
Since these will eventually be encapsulated under some type of advanced section, debug is not a great name for the endpoint.

--- a/pkg/ui/styl/pages/reports.styl
+++ b/pkg/ui/styl/pages/reports.styl
@@ -1,4 +1,4 @@
-$debug-table
+$reports-table
   margin 0 0 40px
   display table
   width 100%
@@ -28,7 +28,7 @@ $debug-table
       max-width 1px
 
 .failure-table
-  @extend $debug-table
+  @extend $reports-table
 
   &__row
     alternating-background white $table-border-color
@@ -41,7 +41,7 @@ $debug-table
 
 
 .problems-table
-  @extend $debug-table
+  @extend $reports-table
 
   &__row
     background-color white
