ui: Palette Cleansing
Cuts down our stylus color palette to a small fraction of the colors
defined previously; early in UI development we were rampantly defining
colors with little thought given to any sort of common palette, and
there was a lot of cleanup debt remaining. As of this commit, we are
using only 21 colors in the UI, and each one of them has a consistent
semantic meaning.

Special thanks to @kuanluo for sitting with me for two hours while we
tediously went through this.

--- a/pkg/ui/styl/pages/debug.styl
+++ b/pkg/ui/styl/pages/debug.styl
@@ -5,7 +5,7 @@ $debug-table
 
   &__row
     display table-row
-    background-color $light-gray-2
+    background-color $table-border-color
 
     &--header
       font-weight 900
@@ -31,10 +31,10 @@ $debug-table
   @extend $debug-table
 
   &__row
-    alternating-background $light-gray-2 $lighter-gray
+    alternating-background $table-border-color $table-border-color
 
     &&--header
-      background-color $secondary-red-3
+      background-color $alert-color
 
   &__cell
     white-space normal
