--- a/pkg/ui/src/views/databases/containers/tableDetails/sqlhighlight.styl
+++ b/pkg/ui/src/views/databases/containers/tableDetails/sqlhighlight.styl
@@ -2,19 +2,18 @@
 
 .sql-highlight
   font-family Inconsolata-Regular
-  background-color $secondary-gray-3
   padding 20px
   display inline-block
   width 100%
 
 .sql-highlight.hljs
-    background-color $main-dark-gray
-    color $secondary-gray-12
+    background-color $headings-color
+    color white
     overflow-x auto
 
     .hljs-string
-        color $syntax-orange
+        color $syntax-string-color
 
     .hljs-keyword
     .hljs-literal
-        color $syntax-blue
+        color $syntax-keyword-color
