--- a/pkg/ui/src/views/shared/components/alertBox/alertbox.styl
+++ b/pkg/ui/src/views/shared/components/alertBox/alertbox.styl
@@ -7,7 +7,7 @@
   float left
   margin 0 6px 10px
   padding 20px
-  border 1px solid $dark-blue
+  border 1px solid $headings-color
   border-radius 5px
   font-family Lato-Regular
   
@@ -31,16 +31,16 @@
     cursor pointer
 
   &--notification
-    color $light-blue
-    border-color $alert-blue-dark
-    background-color $alert-blue-light
+    color $body-color
+    border-color $notification-info-border-color
+    background-color $notification-info-fill-color
 
   &--warning
-    color $light-blue
-    border-color $alert-yellow-dark
-    background-color $alert-yellow-light
+    color $body-color
+    border-color $notification-warning-border-color
+    background-color $notification-warning-fill-color
 
   &--critical
-    color $light-blue
-    border-color $alert-red-dark
-    background-color $alert-red-light
+    color $body-color
+    border-color $notification-alert-border-color
+    background-color $notification-alert-fill-color
