--- a/pkg/ui/styl/base/palette.styl
+++ b/pkg/ui/styl/base/palette.styl
@@ -16,90 +16,27 @@ permissions and limitations under the License.
 Author: Matt Tracy (matt@cockroachlabs.com)
 */
 
-// These colors are specified by the Cockroach UI-Kit designs.
-
-// Main colors
-$main-green = #7DBC42 // Main Highlight color, Status: Active
-$main-navy  = #151F34 // Main Highlight color, Main Headers
-
-// Main navigation colors
-$main-dark-gray = #595F6C // Main Navigation Rollover
-$main-gray      = #9F9F9F // Main Navigation
-
-// Secondary colors
-$secondary-gold   = #F2BE2C // Status: Idle, Chart Color
-$secondary-salmon = #F16969 // Status: Inactive, Chart Color
-$secondary-blue   = #4E9FD1 // Text Link, Chart Color
-$secondary-teal   = #47E2AA // Chart Color
-$secondary-purple = #D77FBF // Chart Color
-
-$secondary-red    = #ED7785 // Status: Missing/Error
-
-// Secondary nav colors
-$secondary-slate-gray = #7C8495 // Secondary Navigation
-$secondary-light-gray = #A6A6B2 // Secondary Headers
-
-// These colors weren't specified in the original UI-kit,
-// but were present in the design.
-
-// TODO: Discuss with designer to see if any can/should
-// be replaced by the primary/secondary palette colors.
-
-$secondary-gray-1  = #D1D1D1 // navbar/topbar borders
-$secondary-gray-2  = #C7C7D0 // last updated color
-$secondary-gray-3  = #E7EBF1 // subnav background
-$secondary-gray-4  = #F7F7F7 // main background, help-us header bg
-$secondary-gray-5  = #DDDDDD // viz info icon
-$secondary-gray-6  = #5F6C87 // table headers
-$secondary-gray-7  = #F5F6F7 // table alt color
-$secondary-gray-8  = #E3E3E3 // table border, hr
-$secondary-gray-9  = #BEBECC // banner/modal close icon
-$secondary-gray-10 = #A7A7B3 // table timestamp color
-$secondary-gray-11 = #5D5D5D // skull icon background
-$secondary-gray-12 = #ECECEC // cancel button background
-$secondary-gray-13 = #8D8D8D // cancel button foreground
-$secondary-gray-14 = #D6D6D6 // cancel button hover
-$secondary-gray-15 = rgba(67, 84, 109, .22) // tooltip shadow
-$secondary-gray-16 = #6D6F74 // tooltip text
-$secondary-gray-17 = #959797 // main nav inactive
-
-$secondary-green-1 = #66AA26 // subnav active
-
-$secondary-red-2  = #AA3737 // invalid form element border
-$secondary-red-3  = #D0021B // invalid form element text
-$secondary-red-4  = #BC2424 // invalid form element warning
-
-$secondary-blue-2 = #317DAB // submit button hover
-$secondary-blue-3 = #51BBFC // new main nav hover/active, selectors
-
-$secondary-gold-2 = #ECB51A // banner opt-in button hover
-
-// Syntax colors
-$syntax-orange = #EE833B
-$syntax-blue = #6DC0CE
-
-// NEW PALETTE
-
-$dark-blue = #152849
-$light-green = #66AA26
-$light-blue = #5F6C87
-$link-blue = #4E9FD1
-$glow-blue = #51BBFD
-$lighter-blue = #BEBECD
-$light-gray = #B8BBBC
-$light-gray-2 = #DCDCDC
-$lighter-gray = #F2F2F2
-$gray-blue = #C8CBD4
-$dark-gray-blue = #728099
-$hover-gray = #F0F0F0 // dropdown hover
-$table-gray = #5D5D5D
-$banner-red = #F4D9D9
+// Primary Palette
+$headings-color = #152849
+$healthy-color = #66AA26
+$warning-color   = #F2BE2C
+$alert-color    = #ED7785
+$body-color = #5F6C87
+$link-color = #51BBFD
+$tooltip-color = #B8BBBC
+$tooltip-shadow = rgba(0, 0, 0, .20)
+$table-border-color = #EDEDED
+$button-border-color = #C8CBD4
+$background-color  = #F6F6F6
 
 // Alert colors
+$notification-alert-fill-color = #F4D9D9
+$notification-alert-border-color = #F2B7B7
+$notification-info-fill-color = #F2F8EC
+$notification-info-border-color = #C8E0AF
+$notification-warning-fill-color = #FDF8E9
+$notification-warning-border-color = #F9E6AF
 
-$alert-red-light = #F6DBDB
-$alert-red-dark = #F5B9B9
-$alert-blue-light = #D5EAF8
-$alert-blue-dark = #ADDCFA
-$alert-yellow-light = #F7ECCE
-$alert-yellow-dark = #F5DF9E
+// Syntax highlight colors
+$syntax-string-color = #E4843C
+$syntax-keyword-color = #91C8F2
