--- a/pkg/ui/styl/pages/nodes.styl
+++ b/pkg/ui/styl/pages/nodes.styl
@@ -6,8 +6,8 @@
   vertical-align middle
   
   &--dead
-    color $secondary-red
+    color $alert-color
   &--suspect
-    color $secondary-gold
+    color $warning-color
   &--healthy
-    color $main-green
+    color $healthy-color
