--- a/pkg/ui/src/views/cluster/components/visualization/visualizations.styl
+++ b/pkg/ui/src/views/cluster/components/visualization/visualizations.styl
@@ -25,7 +25,7 @@ $viz-sides = 62px
 .visualization
   position relative
   background-color white
-  color $dark-blue
+  color $headings-color
   border-radius 5px
   border 1px solid rgba(0, 0, 0, .1)
   // prevents borders from doubling up
@@ -48,11 +48,11 @@ $viz-sides = 62px
   &__title
     font-size 14px
     font-family Lato-Bold
-    color $light-blue
+    color $body-color
     display inline
 
   &__subtitle
-    color $light-gray
+    color $tooltip-color
     margin-left 5px
     font-size 12px
     font-family Lato-Regular
@@ -72,17 +72,17 @@ $viz-sides = 62px
     width 12px
     height 12px
     border-radius 50%
-    border 1px solid $light-gray
+    border 1px solid $tooltip-color
     font-size 10px
-    color $light-gray
+    color $tooltip-color
     line-height 10px
 
   .hover-tooltip--hovered &__info-icon
-    border-color $light-blue
-    color $light-blue
+    border-color $body-color
+    color $body-color
 
   .icon-warning
-    color $secondary-gold
+    color $warning-color
 
 .linegraph
   height 100%
@@ -94,4 +94,4 @@ $viz-sides = 62px
     opacity .2
 
 .linked-guideline__line
-  stroke $glow-blue
+  stroke $link-color
