--- a/pkg/ui/src/views/cluster/containers/timescale/timescale.styl
+++ b/pkg/ui/src/views/cluster/containers/timescale/timescale.styl
@@ -2,8 +2,8 @@
 
 .time-range
   margin-left 15px
-  color $lighter-blue
+  color $button-border-color
   font-size 12px
   font-family Lato-Regular
   &__time, &__date
-    color $dark-gray-blue
+    color $body-color
