--- a/pkg/ui/src/views/shared/components/dropdown/dropdown.styl
+++ b/pkg/ui/src/views/shared/components/dropdown/dropdown.styl
@@ -1,21 +1,23 @@
 @require nib
 @require "~styl/base/palette.styl"
 
+$dropdown-hover-color = darken($background-color, 2.5%)
+
 .dropdown
   text-transform uppercase
   letter-spacing 2px
   line-height 17px
   padding 1rem 2rem
   vertical-align middle
-  border 1px solid $gray-blue
+  border 1px solid $button-border-color
   border-radius 4px
   display inline-flex
   white-space nowrap
   padding-right 10px
-  color $light-blue
+  color $body-color
 
   &:hover
-    background-color $hover-gray
+    background-color $dropdown-hover-color
 
   &__title
     vertical-align middle
@@ -26,32 +28,32 @@
     vertical-align middle
 
     &:hover
-      background-color $hover-gray
+      background-color $dropdown-hover-color
 
   &__side-arrow
     font-family Lato-Bold
     display none
-    color $secondary-blue-3
+    color $link-color
     cursor pointer
 
     &:first-child
-      border-right 1px solid $gray-blue
+      border-right 1px solid $button-border-color
       padding 1rem 20px
       border-top-left-radius 4px
       border-bottom-left-radius 4px
 
     &:last-child
-      border-left 1px solid $gray-blue
+      border-left 1px solid $button-border-color
       padding 1rem 20px
       border-top-right-radius 4px
       border-bottom-right-radius 4px
 
     &[disabled]
-      background-color $lighter-gray
+      background-color $table-border-color
       cursor auto
 
       polyline
-        stroke $light-gray
+        stroke $button-border-color
 
   &--side-arrows
     padding 0
@@ -63,6 +65,6 @@
       display inline
 
       &:hover
-        background-color $hover-gray
+        background-color $dropdown-hover-color
 
 // NOTE: react-select styles can be found in styl/shame.styl
