--- a/pkg/ui/src/views/shared/components/toolTip/tooltip.styl
+++ b/pkg/ui/src/views/shared/components/toolTip/tooltip.styl
@@ -1,12 +1,11 @@
 @require "~styl/base/palette.styl"
 @require "~styl/base/layout-vars.styl"
 
-.tooltip, .timescale-selector
+.tooltip
   position absolute
   z-index $z-index-tooltip
   padding 35px
-  border 1px solid $secondary-gray-1
-  box-shadow 2px 2px 0 $secondary-gray-15
+  box-shadow 2px 2px 0 $tooltip-shadow
   border-radius 4px
   opacity 0
   visibility hidden
@@ -16,26 +15,6 @@
   left 95%
   right auto
   white-space normal
-
-  .content, .warning
-    font-size 11px
-    color $secondary-gray-16
-    font-family Lato-Regular
-  .title, .warning-title
-    font-size 13px
-    color $main-navy
-    font-family Lato-Heavy
-    text-align center
-    width 100%
-    padding-bottom 5px
-
-  .warning .icon-warning
-    color $secondary-gold
-    font-size 50px
-    width 50px
-    line-height 50px
-    margin auto
-    margin-top 5px
 
   dt
     margin-top 10px
@@ -66,7 +45,7 @@
     background rgba(255, 255, 255, .98)
     font-family Lato-Regular
     text-align left
-    color $light-blue
+    color $body-color
 
   &--hovered &__text
     visibility visible
