--- a/pkg/ui/styl/layout/layout.styl
+++ b/pkg/ui/styl/layout/layout.styl
@@ -16,9 +16,7 @@ permissions and limitations under the License.
 Author: Matt Tracy (matt@cockroachlabs.com)
 */
 
-$topbar-border      = $secondary-gray-1
-$last-updated-color = $secondary-gray-2
-$subnav-background  = $secondary-gray-4
+$subnav-background  = $background-color
 
 .page
   position relative
@@ -41,8 +39,8 @@ $subnav-background  = $secondary-gray-4
   position relative
 
   &--fixed
-    background-color $secondary-gray-4
-    border-bottom 1px solid $lighter-gray
+    background-color $background-color
+    border-bottom 1px solid $table-border-color
 
   &__list
     clearfix()
@@ -54,7 +52,7 @@ $subnav-background  = $secondary-gray-4
 
 .header
   flex 0 0 auto
-  color $dark-blue
+  color $headings-color
   font-size 24px
   padding 24px 24px 12px
   text-transform uppercase
@@ -87,310 +85,21 @@ $subnav-background  = $secondary-gray-4
   max-width 1350px
   clearfix()
 
-  .form
-    padding 40px 10px
-    width 600px
-    font-size 13px
-
-    hr
-      border 1px solid $secondary-gray-8
-      margin 40px 0
-
-.section
-  input
-    border-radius 5px
-    border 1px solid $secondary-gray-1
-    padding 15px
-    font-size 12px
-    font-family Lato-Medium
-    margin-bottom 25px
-
-    &:not([type=checkbox])
-      width 47%
-      margin-right 3%
-      height 40px
-
-    &[type=checkbox]
-      display inline
-      margin-right 15px
-      padding-bottom 0
-      margin-bottom 25px
-
-    &.show-required
-      &:invalid
-        border-color $secondary-red-2
-      &:invalid + span.status:after
-          content "Required"
-      &:invalid + * + span.icon:after
-        content "\26A0"
-
 .parent-link a
-  color $glow-blue
+  color $link-color
   font-size 13px
   font-family Lato-Regular
   text-transform uppercase
   text-decoration none
   letter-spacing 2px
 
-span.status
-  position absolute
-  margin-left -65px
-  margin-top 10px
-  color $secondary-red-3
-
-span.icon
-  margin-top 10px
-  color $secondary-red-4
-  position absolute
-  margin-left -15px
-
-.topbar
-  padding 0 3rem 1rem
-  background-color white
-  border-bottom 1px solid $topbar-border
-  height $top-bar-height
-  width 100%
-  position absolute
-  top 0
-  right 0
-  z-index $z-index-page-config
-
-  h2
-    font-size 3rem
-    font-family Lato-Medium
-    color $main-navy
-    line-height $top-bar-height
-    padding-top 0
-    margin-top 0
-    display inline-block
-
-    a
-      text-decoration none
-      color $main-gray
-
-  img
-    position relative
-    top 8px
-
-  .health
-    text-transform uppercase
-    display block
-    font-size 11px
-    letter-spacing 1px
-    color $main-dark-gray
-
-    span.health-icon
-      display inline-block
-      padding 0 3px
-      height 21px
-      border-radius 100%
-
-    .icon-check-circle
-      color $main-green
-    .icon-x, .icon-stop-sign
-      color $secondary-red
-    .icon-skull
-      background-color $secondary-gray-11
-      color white
-
-    *
-      display inline
-
-    .unreachable-text, .good
-      position relative
-      top -1.5px
-      font-variant normal
-      font-family Lato-Heavy
-      color $secondary-red
-    .good
-      color $main-green
-
-  .info-container
-    display inline-block
-    margin-left 25px
-
-    .last-updated
-      font-size 1rem
-      font-family Lato-Regular
-      color $last-updated-color
-      letter-spacing .2px
-    .health
-      font-family Lato-Heavy
-      div
-        margin-left 5px
-        position relative
-        top 1px
-        span.refreshing-text
-          color $secondary-gray-2
-          font-variant none
-
-    strong
-      font-family Lato-Bold
-
-a.toggle
-  font-family Lato-Bold
-  font-size 1rem
-  color $secondary-light-gray
-
-.status
-  font-size 9px
-  &.missing
-    color $secondary-red
-  &.stale
-    color $secondary-gold
-  &.healthy
-    color $main-green
-
-.modal-container
-  z-index 10
-
-  &.close
-    .screen, .modal
-      transition opacity .2s ease-in
-      opacity 0
-
-  .screen
-    position fixed
-    top 0
-    left 0
-    bottom 0
-    right 0
-    background-color rgba(21, 31, 52, .8)
-    z-index 10
-
-  .modal
-    position absolute
-    width 700px
-    height 620px
-    background-color white
-    top 20px
-    z-index 20
-    left 50%
-    margin-left -350px
-    border 8px solid rgba(21, 31, 52, .4)
-    box-shadow 0 2px 4px rgba(0, 0, 0, .5)
-    border-radius 4px
-    background-clip padding-box
-    padding 35px
-    opacity 1
-    transition height .4s ease-in, width .4s ease-in, opacity .2s ease-in, margin .4s ease-in
-
-    &.hide-modal
-      opacity 0
-
-    &.thanks, &.thanks-pre
-      width 500px
-      height 375px
-      margin-left -250px
-
-    &.thanks
-      button
-        margin-left 52px
-
-    h1, .intro, .thanks, button, form
-      transition opacity .2s ease-in
-
-    &.hide, &.thanks-pre
-      h1, .intro, .thanks, button, form
-        opacity 0
-        transition opacity .2s ease-in
-
-
-    h1
-      color $main-green
-      margin-bottom 5px
-      margin-top 0
-      width 100%
-      text-align left
-      font-size 33px
-      font-family Lato-Regular
-
-    .intro
-      color $main-navy
-      margin 15px 0 30px
-      line-height 18px
-      font-family Lato-Regular
-      font-size 14px
-      line-height 2.25rem
-
-    .optin-text
-      margin -17px 20px 20px 28px
-
-    .thanks
-      margin 35px 52px
-
-      a
-        color $main-navy
-
-    .inputs
-      background-color $secondary-gray-3
-      margin 0 -35px
-      padding 30px 30px 10px
-      border-top 1px solid $secondary-gray-1
-      border-bottom 1px solid $secondary-gray-1
-
-    .close
-      position absolute
-      top 30px
-      right 30px
-      color $secondary-gray-9
-
-    button
-      margin 20px 0 35px 20px
-      width auto
-      padding 10px 25px
-
 #content
   position relative
-
-.saving
-  display inline
-  font-family Lato-Medium
-  color $secondary-gray-2
-  transition opacity 2s ease-in
-  opacity 0
-  &.no-animate
-    transition opacity 0s
-  &.failed
-    opacity 1
 
 .optin-text
   font-size 10px
   margin -17px 28px 20px
   line-height 1.8rem
-
-.event-table-container
-    background-color white
-  .table-header
-    padding 15px
-    button, h1
-      margin 0
-      padding 0
-      display inline
-      margin-right 20px
-    button.toggled, button.untoggled
-      border 2px solid $secondary-blue
-      height auto
-      width auto
-      padding 5px
-      font-size 12px
-    button.untoggled
-      background-color white
-      color $secondary-blue
-
-  // TODO: if we want the green border from the mock, we should inline the svg
-  .icon-info-filled
-    color $main-green
-    width 18px
-    height 18px
-    padding 0
-    margin 0
-    line-height 0
-
-  .timestamp
-    font-family Lato-Bold
-    font-size 11px
-    color $secondary-gray-10
 
 .page.events
   .section
@@ -422,20 +131,6 @@ a.toggle
     font-size 16px
     margin-bottom 2rem
 
-#footer
-  height $footer-height
-  padding-left 80px
-  border-top 1px solid $secondary-gray-1
-
-  .links
-    width 600px
-    margin auto
-    a
-      line-height $footer-height
-      margin 20px
-      text-decoration none
-      color $main-gray
-
 div.raft-filters
   label, b
     margin 5px
@@ -445,10 +140,6 @@ div.raft-filters
 
     input[type="checkbox"]
       margin 5px
-
-.database-events
-  width 918px
-  border 1px solid $secondary-gray-1
 
 .table-stats
   margin-bottom 50px
