--- a/pkg/ui/styl/layout/navigation-bar.styl
+++ b/pkg/ui/styl/layout/navigation-bar.styl
@@ -18,15 +18,11 @@ Author: Matt Tracy (matt@cockroachlabs.com)
 
 // ---- Navigation ----
 $navbar-bg            = white
-$navbar-border        = $secondary-gray-1
-$main-nav-inactive    = $secondary-gray-17
-$main-nav-active-bg   = $secondary-gray-4
-$main-nav-active-font = $secondary-blue-3
-$main-nav-active-icon = $secondary-blue-3
-$main-nav-hover       = $secondary-blue-3
-$subnav-active-color  = $secondary-green-1
-$subnav-text-color    = $secondary-slate-gray
-$subnav-hover-color   = $main-dark-gray
+$main-nav-active-bg   = $background-color
+$main-nav-active-font = $link-color
+$main-nav-active-icon = $link-color
+$main-nav-hover       = $link-color
+$subnav-active-color  = $healthy-color
 
 $subnav-underline-height = 3px
 
@@ -40,7 +36,7 @@ $subnav-underline-height = 3px
   width $nav-width
   modular-font-size '1'
   background-color $navbar-bg
-  border-right 1px solid $light-gray-2
+  border-right 1px solid $table-border-color
   margin 0
   padding 0
   display block
@@ -60,23 +56,22 @@ $subnav-underline-height = 3px
     font-size 8px
     text-transform uppercase
     float left
-    color $light-blue
+    color $body-color
     list-style-type none
     line-height 1.8rem
 
     &.normal
       path
-        fill $light-blue
+        fill $body-color
 
       &.active, &.active:hover, &:hover
-        color $glow-blue
+        color $link-color
 
         path
-          fill $glow-blue
+          fill $link-color
 
     &.cockroach
       padding-top 10px
-      border-bottom 1px solid $navbar-border
 
     &.active
       background-color $navbar-bg
@@ -116,7 +111,7 @@ $subnav-underline-height = 3px
     flex-flow row nowrap
     justify-content flex-start
     modular-font-size '1'
-    color $subnav-text-color
+    color $tooltip-color
     list-style-type none
     line-height $subnav-height - $subnav-underline-height
 
@@ -179,7 +174,7 @@ ul.pagination
   text-transform uppercase
   font-family Lato-Heavy
   font-size 1.1rem
-  color $main-nav-inactive
+  color $tooltip-color
   list-style-type none
   text-align center
 
