ui: convert report tables from <div> to <table>

--- a/pkg/ui/styl/pages/reports.styl
+++ b/pkg/ui/styl/pages/reports.styl
@@ -2,6 +2,8 @@ $reports-table
   margin 0 0 40px
   display table
   width 100%
+  border-collapse collapse
+  border-spacing 0
 
   &__row
     display table-row
@@ -11,6 +13,7 @@ $reports-table
       font-weight 900
       color white
       border 0
+      border-style none
 
   &__cell
     padding 6px 12px
